# enhanced-GOTURN-Old-Sumerian

./: CMakeLists.txt  README.md
nets/: solver.prototxt  tracker.prototxt
scripts/: download_trained_model.sh  runTracker.sh
src/helper/: bounding_box.cpp  bounding_box.h  helper.cpp  helper.h  high_res_timer.cpp  high_res_timer.h  image_proc.cpp  image_proc.h
src/loader/: loader_base.cpp  loader_base.h
src/network/: regressor.cpp  regressor.h  regressor_base.cpp  regressor_base.h
src/tracker/: tracker.cpp  tracker.h
src/visualizer/: runTracker.cpp
